<resources>
    <string name="app_name">Qatar2022</string>
    <string name="btnRegistrar">REGISTRAR RESULTADO</string>
    <string name="btnConsulta">CONSULTAR RESULTADOS</string>
    <string name="editTxtIntroResult">Introducir resultado</string>
    <string name="btnSelect">SELECCIONAR</string>
    <string name="btnGuarRes">GUARDAR RESULTADO</string>
    <string name="btnLimpiarDat">LIMPIAR DATOS</string>
    <string name="hintFecha">Introduce la fecha dd/mm//yyyy </string>
    <string name="hintHora">Introduce la hora hh:mm</string>
    <string name="hintFases">Introduce la fase: Fase grupos, Octavos,\nCuartos, Semifinales, Tercer puesto, Final</string>
    <string name="hintSelect1">Seleccionar el equipo 1</string>
    <string name="hintSelect2">Seleccionar el equipo 2</string>
    <string name="hintGol1">Goles del equipo 1</string>
    <string name="hintGol2">Goles del equipo 2</string>
    <string name="txtViewSelectEq">Selección de equipo</string>
    <string name="btnGer">Alemania</string>
    <string name="btnSA">Arabia Saudí</string>
    <string name="btnAr">Argentina</string>
    <string name="btnAUR">Australia</string>
    <string name="btnBEL">Bélgica</string>
    <string name="btnBRA">Brasil</string>
    <string name="btnCAM">Camerún</string>
    <string name="btnSK">Corea del Sur</string>
    <string name="btnCAN">Canadá</string>
    <string name="btnCR">Costa Rica</string>
    <string name="btnCROA">Croacia</string>
    <string name="btnECU">Ecuador</string>
    <string name="btnSPA">España</string>
    <string name="btnEEUU">Estados Unidos</string>
    <string name="btnFRA">Francia</string>
    <string name="btnGAL">Gales</string>
    <string name="btnENG">Inglaterra</string>
    <string name="btnMX">México</string>
    <string name="btnPL">Polonia</string>
    <string name="btnPT">Portugal</string>
    <string name="btnQAT">Qatar</string>
    <string name="btnSEN">Senegal</string>
    <string name="btnSERB">Serbia</string>
    <string name="btnSWZ">Suiza</string>
    <string name="btnTUNZ">Túnez</string>
    <string name="btnUR">Uruguay</string>
    <string name="btnAceptar">ACEPTAR</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="editTextIntroPais">Introduce el país seleccionado</string>
    <string name="txtViewConsultaRes">Consulta resultados por país</string>
    <string name="hintIntroPais">Introduce el país</string>
    <string name="textGuion"> - </string>
    <string name="editTextDEM">Dinamarca</string>
    <string name="editTextGHA">Ghana</string>
    <string name="editTextNE">Holanda</string>
    <string name="editTextIRN">Irán</string>
    <string name="editTextJPN">Japón</string>
    <string name="editTextMARR">Marruecos</string>
    <string name="editTextSelectEq">Selección de equipo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="limpiar">LIMPIAR DATOS</string>
    <string name="sel_eq">SELECCIONAR</string>
    <string name="pais">INTRODUCE EL PAIS</string>
</resources>